dynamically_typed_tests/invalid/variables/became_valid/basicTypeErr04.wacc
# type mismatch: bool <- int

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  b = 1
end
